# platform

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  entrypoint.sh
agent-engine/: Cargo.toml  build.rs
agent-engine/src/: admission.rs  clickup.rs  context.rs  execution_context.rs  executor.rs  gemini.rs  handler.rs  json_schema.rs  lib.rs  mod.rs  teams_logger.rs  tools.rs
agent-engine/src/executor/: budget.rs  compression.rs  conversation.rs  core.rs  decision.rs  hooks.rs  memory.rs  mod.rs  nodes.rs  tool_definitions.rs  tool_params.rs  workflow.rs
agent-engine/src/filesystem/: lifecycle.rs  mod.rs  paths.rs  sandbox.rs  shell.rs  skills.rs  text_io.rs
agent-engine/src/llm/: client.rs  mod.rs  provider.rs  usage.rs
agent-engine/src/runtime/: handler.rs  knowledge_orchestrator.rs  mod.rs  secrets_provider.rs  task_workspace.rs  thread_execution_context.rs  vector_store.rs
agent-engine/src/sandbox/: blueprint.rs  factory.rs  http_runtime.rs  mod.rs  nats_runtime.rs  self_healing.rs
ai/: Cargo.toml
ai/src/: main.rs
ai/src/api/: agent.rs  (+4 more)
commands/: Cargo.toml
commands/src/: agent_execution.rs  agent_execution_context.rs  agent_execution_recovery.rs  agent_integration.rs  agent_memory.rs  agent_skill.rs  agent_storage.rs  agent_thread_model.rs  agent_thread_task_subscription.rs  ai_agents.rs  ai_knowledge_base.rs  ai_knowledge_base_document_status.rs  ai_provider_profile.rs  ai_settings.rs  ai_tools.rs  ai_workflows.rs  api_key.rs  api_key_app.rs  assignment_event.rs  b2b_member_role.rs  billing.rs  board_reconciler.rs  cache_keys.rs  composio.rs  conversation.rs  create_organization.rs  create_workspace.rs  delete_organization.rs  delete_workspace.rs  deployment.rs  deployment_email_template.rs  deployment_storage.rs  dynamic_update_set.rs  email.rs  embedding.rs  embedding_task.rs  enterprise_connection.rs  event_log.rs  execution_task_graph.rs  integration_linking.rs  (+48 more)
common/: Cargo.toml
common/src/: cache.rs  capabilities.rs  chargebee.rs  clickhouse.rs  clickhouse_api_key.rs  clickhouse_webhook.rs  cloudflare.rs  db_router.rs  deps.rs  dns_verification.rs  dodo.rs  embedding.rs  encryption.rs  filename.rs  json_utils.rs  knowledge_base_store.rs  lib.rs  memory_store.rs  postmark.rs  result_ext.rs  smtp.rs  state.rs  telemetry.rs  text_processing.rs  tinybird.rs  usage_tracking.rs  vector_store.rs
console/: Cargo.toml
console/src/: main.rs
dto/: Cargo.toml
dto/src/: lib.rs
gateway/: Cargo.toml
gateway/src/: delta_stream.rs  handlers.rs  handlers.rs.bak  main.rs  validation.rs
models/: Cargo.toml
models/src/: actor.rs  actor_project.rs  agent_execution_context.rs  agent_execution_recovery.rs  agent_integration.rs  agent_session.rs  agent_skill.rs  agent_thread.rs  agent_thread_task_subscription.rs  ai_agent.rs  ai_context.rs  ai_knowledge_base.rs  ai_memory.rs  ai_tool.rs  ai_workflow.rs  api_key.rs  api_key_permissions.rs  approval.rs  ask_user.rs  billing.rs  billing_invoice.rs  composio.rs  conversation.rs  deployment.rs  deployment_ai_settings.rs  deployment_auth_settings.rs  deployment_b2b_settings.rs  deployment_custom_roles.rs  deployment_email_template.rs  deployment_invitation.rs  deployment_jwt_template.rs  deployment_keypair.rs  deployment_restrictions.rs  deployment_sms_template.rs  deployment_social_connection.rs  deployment_storage_usage.rs  deployment_ui_settings.rs  deployment_usage_record.rs  enterprise_connection.rs  error.rs  (+46 more)
oauth-relay/: Cargo.toml  wrangler.toml
oauth-relay/src/: lib.rs
platform/: Cargo.toml
platform/src/: bootstrap.rs  http_tracing.rs  lib.rs  main.rs
queries/: Cargo.toml
queries/.sqlx/: query-02db90faa67cd7ae645ff8afcb2e1e3abcb7ae8752581663fd7e372c3130fee7.json  query-09639e47a2ef172eea8131e0e9b1f85679f71d47ade64a386c3ac087cc56ad18.json  query-1a32d5d73c4f8d6358cb3a3113b6b9b9d35bcbd0ceb3930ad5b5b3797eadaf7e.json  query-2dba3f410d9b7197226ecdf7d360515dca2307ec7fd9920b26101aa5129e95dd.json  query-3f148923d464405886d08e47bf3ca801c906977a02e5bf95c29f779395f56ea8.json  query-4395cfe494b3af91660fab268b1e1a23c09af2c858e3c26ac13eeaacd053cbad.json  query-462e819aedb17dd5929aeb1268d79c82aff2ee42593d6088738d0e6834bf28a9.json  query-504fd6edb2d62061a91d897a927077e9cef513d288f45e15cf9e8b6b2d591beb.json  query-54dd37971e51b133fde662100690f5d22ed017a7b6086bea52bf4181b2ad2f37.json  query-81bd13fb1bb796983268a0919b99460b879f72ebea85bf56430cbb5347aee1f9.json  query-82c5b704def7cfa7f79bdc2cc6a50222be1532be9b3674d3d041bf3144991d84.json  query-93ab1c2db282f76fc7b12f61754b9cba75e2c4111247d3c787672624ac53786d.json  query-95a9656c911961f1b8feee2b792accc5ad4c89769d574134f4ce491c2a81ff23.json  query-9f37aac0342bd53d58b87af63b6976361a7169825207e5cf00b21abeedb17677.json  query-b5aa3b47b4fd4adfa5a8b006d589ab7cfe1fcbf2897d57b41c00cbe3ea3714fb.json  query-f04ff806e09d6f5fd3f3f50c32ac34a4c31efac609fd83ac53013eeb170a9d47.json  query-f108b6fc0305cb0ad47b73a6df593ebe0621b22c9be10be390b616e6c1f4557b.json
queries/src/: agent_execution_context.rs  agent_execution_recovery.rs  agent_integration.rs  agent_memory.rs  agent_session.rs  agent_skill.rs  agent_thread_model.rs  agent_thread_task_subscription.rs  ai_agent.rs  ai_knowledge_base.rs  ai_provider_profile.rs  ai_settings.rs  ai_tool.rs  ai_workflow.rs  api_key.rs  api_key_audit.rs  api_key_gateway.rs  b2b.rs  billing.rs  composio.rs  conversation_history.rs  deployment.rs  enterprise_sso.rs  execution_task_graph.rs  hybrid_search.rs  invitation.rs  lib.rs  mcp_server.rs  notification.rs  oauth.rs  oauth_runtime.rs  organization.rs  organization_invitation.rs  plan_access.rs  project.rs  project_task_board.rs  project_task_schedule.rs  rate_limit_scheme.rs  segments.rs  signin.rs  (+12 more)
rate-limiter/: Cargo.toml
realtime/: Cargo.toml  MIGRATION_PROGRESS.md  test_agent_flow.rs
realtime/src/: main.rs
templatekit/: Cargo.toml
templatekit/src/: agent_templates.rs  helpers.rs  lib.rs  prompt_loader.rs
worker/: Cargo.toml
worker/src/: consumer.rs  main.rs  metrics.rs  nats_consumer.rs  nats_types.rs  scheduler.rs  throttler.rs
(+2145 files in other folders)
