[package]
name = "commands"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
common = { path = "../common" }
queries = { path = "../queries" }
dto = { path = "../dto" }
sqlx = { version = "0.8", features = ["postgres", "chrono", "json", "rust_decimal"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
rand = "0.9.0"
argon2 = "0.5.3"
totp-rs = "5.4.0"
base64 = "0.22.1"
jsonwebtoken = "9.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
pgvector = { version = "0.4.1", features = ["sqlx", "serde", "halfvec"] }
half = "2.4"
tiktoken-rs = "0.5"
async-nats = "0.42.0"
futures = "0.3"
aws-sdk-s3 = "1.91.0"
zstd = "0.13"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
regex = "1.10.2"
html2text = "0.16"
rcgen = { version = "0.13", features = ["aws_lc_rs", "pem"] }
rust_decimal = "1.36"
josekit = "0.8"
urlencoding = "2.1"
hickory-resolver = "0.24"
validator = { version = "0.19", features = ["derive"] }
scraper = "0.22"
