[package]
name = "dto"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
wacht = "0.0.1-alpha.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clickhouse = { version = "0.13.3", features = ["chrono"] }
pgvector = { version = "0.4.1", features = ["sqlx", "serde", "halfvec"] }
half = "2.4"
