[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
models = { path = "../models" }
queries = { path = "../queries" }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.8" }
moka = { version = "0.12", features = ["future"] }
async-nats = "0.42.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
futures = "0.3"
sha2 = "0.10"
zstd = "0.13"
bincode = "1.3"
base64 = "0.22"
dashmap = "6.1"
redis = "0.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dto = { path = "../dto" }
