[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["postgres", "chrono", "json"] }
pgvector = { version = "0.4.1", features = ["sqlx", "serde", "halfvec"] }
half = "2.4"
thiserror = "1.0"
redis = { version = "0.29.5", features = ["tokio-comp"] }
clickhouse = { version = "0.14.2", features = ["chrono", "native-tls"] }
sonyflake = "0.3"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
wacht = { path = "../../wacht-rs" }
