[package]
name = "oauth-relay"
version = "0.1.0"
edition = "2021"
authors = ["Saurav Singh <snipextt@gmail.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
axum = { version = "0.8", default-features = false, features = ["query", "json"] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive"] }
url = "2.5"
urlencoding = "2.1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
