[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "console-api"
path = "src/bin/console-api.rs"

[[bin]]
name = "backend-api"
path = "src/bin/backend-api.rs"

[[bin]]
name = "frontend-api"
path = "src/bin/frontend-api.rs"

[dependencies]
models = { path = "../models" }
dto = { path = "../dto" }
commands = { path = "../commands" }
queries = { path = "../queries" }
common = { path = "../common" }
agent-engine = { path = "../agent-engine" }
wacht = { version = "0.0.1-alpha.8", features = ["axum"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
rustls = { version = "0.23.27", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sha2 = "0.10"
redis = { version = "0.29.5", features = ["tokio-comp"] }
