[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "console-api"
path = "src/bin/console-api.rs"

[[bin]]
name = "backend-api"
path = "src/bin/backend-api.rs"

[[bin]]
name = "oauth-api"
path = "src/bin/oauth-api.rs"

[[bin]]
name = "gateway-api"
path = "src/bin/gateway-api.rs"

[dependencies]
models = { path = "../models" }
dto = { path = "../dto" }
commands = { path = "../commands" }
queries = { path = "../queries" }
common = { path = "../common" }
wacht = { version = "0.1.0-beta.1", features = ["axum"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
rustls = { version = "0.23.27", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rsa = { version = "0.9.10", features = ["sha2"] }
base64 = "0.21"
rand = "0.9.0"
url = "2.5"

redis = { version = "0.29.5", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json"] }
rmcp = { version = "0.8.5", features = ["client", "transport-streamable-http-client-reqwest"] }
moka = { version = "0.12", features = ["future"] }
async-nats = "0.42.0"
futures = "0.3"
zstd = "0.13"
bincode = "1.3"
dashmap = "6.1"
handlebars = "6.2.0"
tiktoken-rs = "0.5"
quick-xml = { version = "0.38.0", features = ["serialize"] }
tokio-stream = "0.1"
urlencoding = "2.1"
regex = "1.10"
sonyflake = "0.3"
