[package]
name = "queries"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
common = { path = "../common" }
dto = { path = "../dto" }
sqlx = { version = "0.8", features = ["postgres", "chrono", "json", "rust_decimal"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
pgvector = { version = "0.4.1", features = ["sqlx", "serde", "halfvec"] }
half = "2.4"
clickhouse = { version = "0.13.3", features = ["chrono"] }
rust_decimal = "1.36"
