[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
redis = { version = "0.29.5", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "json",
] }
