[package]
name = "realtime"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
llm = { version = "1.2.9", features = ["google"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23.27", features = ["ring"] }
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.8", features = ["macros", "multipart"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
fastwebsockets = { version = "0.10.0", features = ["upgrade", "with_axum"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-nats = "0.42.0"
handlebars = "6.2.0"
tracing = "0.1"
tiktoken-rs = "0.5"
quick-xml = { version = "0.38.0", features = ["serialize"] }
ureq = { version = "3.0.11", features = ["json"] }
urlencoding = "2.1"
regex = "1.10"
eventsource-client = "0.13"
