[package]
name = "templatekit"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
models = { path = "../models" }

handlebars = "6.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
