[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
shared = { version = "0.1.0", path = "../shared" }
async-nats = "0.42.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
